--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,28 @@
     <title>Title</title>
 </head>
 <body>
-
+    <div class="container" ng-controller="indexController">
+        <h3>Product List</h3>
+        <table class="table table-hover" cellspacing="0" cellpadding="0">
+            <tr>
+                <td>ID</td>
+                <td>Name</td>
+                <td>Cost</td>
+                <td>Action</td>
+            </tr>
+            <tbody>
+            <tr ng-repeat="p in ProductList">
+                <td>{{p.id}}</td>
+                <td>{{p.title}}</td>
+                <td>
+                    {{p.cost}}
+                </td>
+                <td>
+                    <button class="btn btn-danger" ng-click="deleteProduct(p.id)">Remove</button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
